<resources>
	<string name="question_1">什么是萌耀值？</string>
	<string name="answer_1">
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单
	</string>
	<string name="question_2">萌耀值可以用来干嘛？</string>
	<string name="answer_2">
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
		什么是萌耀值，什么是萌耀榜单，什么是萌耀值，什么是萌耀榜单，
	</string>
	<string name="question_3">萌耀体系规则</string>
	<string name="answer_3">
		-狗圈模块 \n
		发布新的状态   +1 \n
		点赞   +1 \n
		被点赞   +2 \n
		评论   +2 \n
		被评论   +1 \n
		分享   +3 \n
		关注   +1 \n
		\n

		-狗知模块 \n
		点赞   +1 \n
		分享   +3 \n
	</string>
    <string name="app_name">狗搭</string>
	<string name="gouda_nav_item_1">遛狗</string>
	<string name="gouda_nav_item_2">相亲</string>
	<string name="gouda_nav_item_3">寄养</string>
	<string name="main_actionbar_name_select">筛选</string>
	<string name="main_actionbar_name_scene">场景</string>
	<string name="main_actionbar_name_find">发现</string>
    <string name="main_tab_name_gouda">狗搭</string>
    <string name="main_tab_name_gouquan">狗圈</string>
    <string name="main_tab_name_gouzhi">狗知</string>
    <string name="main_tab_name_my">我的</string>
	<string name="actionbar_title_search">消息</string>
	<string name="actionbar_select">筛选</string>
	<string name="actionbar_finish">完成</string>
	<string name="select_on_off">筛选开关</string>
	<string name="owner_gender">主人性别</string>
	<string name="owner_age">主人年龄</string>
    <string name="dog_gender">狗狗性别</string>
	<string name="dog_type">狗体型</string>
    <string name="owner_location">地理位置</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="whatever">不限</string>
	<string name="people_male_tag">人男</string>
	<string name="people_female_tag">人女</string>
	<string name="people_whatever_tag">人不限</string>
	<string name="dg_big">大</string>
	<string name="dg_middle">中</string>
	<string name="dg_small">小</string>
	<string name="dg_whatever">不限</string>
	<string name="dg_big_tag">大</string>
	<string name="dg_middle_tag">中</string>
	<string name="dg_small_tag">小</string>
	<string name="dg_type_tag">体型不限</string>
	<string name="dg_male">公</string>
	<string name="dg_female">母</string>
	<string name="dg_male_tag">狗公</string>
	<string name="dg_female_tag">狗母</string>
	<string name="dg_whatever_tag">狗不限</string>
	<string name="chat_invite">邀请</string>
	<string name="chat_talk">聊天</string>
	<string name="dialog_close_text">×</string>
	<string name="cutevalues">萌值</string>
	<string name="fans">粉丝</string>
	<string name="label">个人标签</string>
	<string name="dynamics">最新动态</string>
	<string name="invite_message">邀请</string>
	<string name="chat_message">聊天</string>
	<string name="actionbar_subarticle">话题系列文章</string>
	<string name="actionbar_searchtitle">话题系列文章</string>
	<string name="article_favorite">收藏</string>
	<string name="gouzhi_detail">狗知详情</string>
	<string name="Location_cancel">取消</string>
	<string name="Location_select">请选择</string>
	<string name="Location_enter">确定</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，小屁孩耍脾气啦。<br/>我们会帮你教训一下这个小屁孩！</string>
    <string name="submit_report">打报告去</string>
	<string name="delete_friends">解除匹配</string>
	<string name="Add_friends_sucess">已经是好友了，可以对话了！</string>
	<string name="dogknow_recommend">推荐</string>
	<string name="dogknow_more">更多</string>
	<string name="gouda_nearby_chat">发送消息认识新朋友吧!</string>
	<string name="gouda_dog_name">我的狗狗是</string>
	<string name="gouda_first_click_icon">移动地图发现更多图标吧！</string>
	<string name="gouda_less_five_point">点击白色骨头发送邀请试试？</string>
	<string name="dg_actionbar_invite">发起邀请</string>
	<string name="dg_actionbar_send">发送</string>
	<string name="jiyang">说说我对寄养的邀请？</string>
	<string name="jiyangStart">寄养开始的时间</string>
	<string name="jiyangEnd">寄养结束的时间</string>
	<string name="xq_condition">说说我对狗狗相亲的要求?</string>
	<string name="lost_time">邀请失效的时间</string>
	<string name="my_dog">我的狗狗是</string>
	<string name="ld_condition">什么时候在哪里一起遛狗呢?</string>
	<string name="default_address">请先选择您要发送的邀请所在的位置</string>
	<string name="invite_more_fifty">邀请超过字数啦</string>
	<string name="gouda_first_invite">点击头像查看TA的信息吧</string>
	<string name="gouda_first_accept">正等待对方验证哟,主人你可要时刻留意右上角对话框呀</string>
    <string name="menu_rss">订阅</string>
    <string name="menu_opensoft">开源软件</string>
    <string name="menu_blog">博客区</string>
    <string name="menu_quests">技术问答</string>
    <string name="menu_setting">设置</string>
    <string name="menu_theme">夜间</string>
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_find">找人</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">请输入正确的email地址</string>
	<string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="actionbar_title_news">资讯详情</string>
    <string name="actionbar_title_blog">博客详情</string>
    <string name="actionbar_title_software">软件详情</string>
    <string name="actionbar_title_question">帖子详情</string>
    <string name="actionbar_title_tweet">动弹详情</string>
    <string name="actionbar_title_event_detail">活动详情</string>
    <string name="actionbar_title_event_location">活动地址</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="actionbar_title_active">好友圈</string>
    <string name="actionbar_title_mes">消息中心</string>
    <string name="actionbar_title_message_detail">对话</string>
	<string name="send_ld_address">选择遛狗的地址</string>
	<string name="send_xq_address">选择相亲的地址</string>
	<string name="send_jy_address">选择寄养的地址</string>
	<string name="text_ack_msg">Read</string>
	<string name="text_delivered_msg">Delivered</string>
	<string name="back">Back</string>
	<string name="save">Save</string>
	<string name="button_pushtotalk">Hold to talk</string>
	<string name="button_send">发送</string>
	<string name="attach_smile">Emoticon</string>
	<string name="attach_picture">Image</string>
	<string name="attach_take_pic">Capture</string>
	<string name="attach_location">Location</string>
	<string name="attach_video">Video</string>
	<string name="attach_file">File</string>
	<string name="attach_voice_call">Voice call</string>
	<string name="attach_video_call">Video call</string>
	<string name="user_card">Business card</string>
	<string name="move_up_to_cancel">Finger up to cancel sending</string>
	<string name="release_to_cancel">Finger release to cancel sending</string>
	<string name="send_fail">Send failed</string>
	<string name="delete_message">Delete message</string>
	<string name="delete_conversation_messages">Delete conversation and messages</string>
	<string name="delete_conversation">Delete conversation</string>
	<string name="copy_message">Copy message</string>
	<string name="delete_voice">Delete voice</string>
	<string name="delete_video">Delete video</string>
	<string name="delete">Delete</string>
	<string name="resend">Resend</string>
	<string name="confirm_resend">Confirm to resend？</string>
	<string name="connect_failuer_toast">Please check the network or try again later</string>
	<string name="network_unavailable">The network connection is not available, please check the network</string>
	<string name="copy">Copy</string>
	<string name="forward">Forward</string>
	<string name="button_logout">Logout</string>
	<string name="button_uploadlog">Upload the log</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="prompt">Prompt</string>
	<string name="clear_records">Clear conversation?</string>
	<string name="clear_all_records">Clear all conversations？</string>
	<string name="location_recv">[%1$s location]</string>
	<string name="location_message">位置信息</string>
	<string name="recording_video">Record video</string>
	<string name="location_prefix">[my location]</string>
	<string name="voice">Voice</string>
	<string name="picture">[Picture]</string>
	<string name="video">[Video]</string>
	<string name="file">[file]</string>
	<string name="voice_call">[Voice call]</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_save">Save</string>
	<string name="button_search">Find</string>
	<string name="button_add">Add</string>
	<string name="search_header">Search</string>
	<string name="network_isnot_available">The network is not available</string>
	<string name="recoding_fail">The recording failure, please try again！</string>
	<string name="select_contacts">Select the contact</string>
	<string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
	<string name="logout">Logout</string>
	<string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
	<string name="exit_group_hint">The group messages will not be received after exiting the group</string>
	<string name="dissolution_group_hint">The group will be dismissed after exiting</string>
	<string name="exit_group">Exit</string>
	<string name="connect_conflict">The same account was loggedin in other device</string>
	<string name="em_user_remove">This user has been removed</string>
	<string name="set">Settings</string>
	<string name="notify">New message notification</string>
	<string name="newnotify">Receiving a new message</string>
	<string name="shake">Shake</string>
	<string name="chatset">Chat settings</string>
	<string name="yangshengqi">Use speaker</string>
	<string name="book_black">Black list</string>
	<string name="session">Conversation</string>
	<string name="address_book">Address book</string>
	<string name="setting">Settings</string>
	<string name="now_refresh_list">Refreshing contact list</string>
	<string name="Application_and_notify">Invitation and notification</string>
	<string name="save_new_nickname">Save new nickname</string>
	<string name="group_chat">Group chat</string>
	<string name="add_friend">Add friends</string>
	<string name="search">Search</string>
	<string name="black_item">Black list</string>
	<string name="diagnose">Diagnose</string>
	<string name="push_nick">IOS offline push nick</string>
	<string name="Current_version">Current version</string>
	<string name="Not_Set">Not set</string>
	<string name="Upload_the_log">Uploading the log</string>
	<string name="The_new_group_chat">Create new group</string>
	<string name="group_name">Group name</string>
	<string name="Group_chat_profile">Group profile</string>
	<string name="Whether_the_public">Is public</string>
	<string name="Open_group_members_invited">Allow members to invite</string>
	<string name="Open_group_chat">Public group</string>
	<string name="blacklist">Black list</string>
</resources>