<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_meng_intro_title"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/titlebar_meng_intro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/main_yellow"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView android:id="@+id/iv_meng_intro_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/ic_return"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#bea076"
                android:textSize="16sp"
                android:text="萌耀说明"/>

        </RelativeLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_20"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_size_15"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/question_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/answer_1"/>
            </LinearLayout>

            <!--分割线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_size_15"
                android:paddingTop="@dimen/text_size_15"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/question_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/answer_2"/>
            </LinearLayout>

            <!--分割线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_size_15"
                android:paddingTop="@dimen/text_size_15"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/question_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/answer_3"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
