<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     >
  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="#BFA173"
      android:layout_gravity="center"
      android:gravity="center"
      >
      <Button
          android:id="@+id/location_cancel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/space_18"
          android:textColor="@color/white"
          android:layout_alignParentLeft="true"
          android:background="#BFA173"
          android:text="@string/Location_cancel"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/space_18"
          android:textColor="@color/white"
          android:layout_centerHorizontal="true"
          android:background="#BFA173"
          android:text="@string/Location_select"/>

      <Button
          android:id="@+id/location_enter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/space_18"
          android:textColor="@color/white"
          android:layout_alignParentRight="true"
          android:background="#BFA173"
          android:text="@string/Location_enter"/>


  </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
       >
        <com.dg.app.widget.Wheel.WheelView
            android:id="@+id/id_province"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </com.dg.app.widget.Wheel.WheelView>

        <com.dg.app.widget.Wheel.WheelView
            android:id="@+id/id_city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </com.dg.app.widget.Wheel.WheelView>

        <com.dg.app.widget.Wheel.WheelView
            android:id="@+id/id_district"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </com.dg.app.widget.Wheel.WheelView>
    </LinearLayout>

</LinearLayout>